<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".ui.fragments.overview.OverviewFragment">
    
    <ImageView
        android:id="@+id/main_overview_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay_overview"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_overview_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_overview_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_overview_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_overview_imageView"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/time_overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_overview_imageView"
        app:layout_constraintEnd_toEndOf="@+id/gradient_overlay_overview" />

    <ImageView
        android:id="@+id/time_overview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/time_overview_textView"
        app:layout_constraintEnd_toEndOf="@+id/time_overview_textView"
        app:layout_constraintStart_toStartOf="@+id/time_overview_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/likes_overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_overview_textView"
        app:layout_constraintEnd_toStartOf="@+id/time_overview_textView" />

    <ImageView
        android:id="@+id/likes_overview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/likes_overview_textView"
        app:layout_constraintEnd_toEndOf="@+id/likes_overview_textView"
        app:layout_constraintStart_toStartOf="@+id/likes_overview_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_overview_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/titleColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_overview_imageView" />

    <ImageView
        android:id="@+id/vegetarian_overview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/title_overview_textView"
        app:layout_constraintTop_toBottomOf="@+id/title_overview_textView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/vegetarian_overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_overview_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_overview_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_overview_imageView" />

    <ImageView
        android:id="@+id/vegan_overview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_overview_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_overview_imageView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/vegan_overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_overview_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegan_overview_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_overview_imageView" />

    <ImageView
        android:id="@+id/gluten_free_overview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_overview_textView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_overview_textView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_overview_textView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/gluten_free_overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_overview_imageView"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_overview_imageView"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_overview_imageView" />

    <ImageView
        android:id="@+id/dairy_free_overview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/gluten_free_overview_imageView"
        app:layout_constraintTop_toBottomOf="@+id/gluten_free_overview_imageView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/dairy_free_overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_overview_imageView"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_overview_imageView"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_overview_imageView" />

    <ImageView
        android:id="@+id/healthy_overview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_overview_textView"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_overview_textView"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_overview_textView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/healthy_overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_overview_imageView"
        app:layout_constraintStart_toEndOf="@+id/healthy_overview_imageView"
        app:layout_constraintTop_toTopOf="@+id/healthy_overview_imageView" />

    <ImageView
        android:id="@+id/cheap_overview_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@+id/healthy_overview_imageView"
        app:layout_constraintTop_toBottomOf="@+id/healthy_overview_imageView"
        app:tint="@color/itemColor" />

    <TextView
        android:id="@+id/cheap_overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/itemColor"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_overview_imageView"
        app:layout_constraintStart_toEndOf="@+id/cheap_overview_imageView"
        app:layout_constraintTop_toTopOf="@+id/cheap_overview_imageView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_overview_imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/descriptionColor"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>